# OOP

lab1/: CMakeLists.txt  Figure.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  Trapezoid.cpp  Trapezoid.h  a.out  lab1  main.cpp  proto
lab2/: CMakeLists.txt  Figure.h  Queue.cpp  Queue.h  Square.cpp  Square.h  TQueueItem.cpp  TQueueItem.h  lab1  main.cpp  test
lab2_2/: CMakeLists.txt  Square.cpp  Square.h  TArray.cpp  TArray.h  a.out  main.cpp  protokol
lab3/: CMakeLists.txt  Rectangle.cpp  Rectangle.h  TArray.cpp  TArray.h  a.out  lab2  main.cpp  makefile
lab4/: CMakeLists.txt  Figure.h  Square.h  TArray.h  TArray.hpp  Trapezoid.cpp  a.out  lab4  main.cpp  makefile
lab6/: CMakeLists.txt  a.out  generator.py  lab6  listic.cpp  listic.h  main.cpp  main1.cpp  makefile  tmp  tmp2
lab6/Figure/: Rectangle.cpp  Square.cpp  Trapezoid.cpp  Trapezoid.h
lab6/TAllocateList/: TAllocationBlock.cpp  TAllocationBlock.h  TList.cpp  TList.h  TListItem.cpp  TListItem.h
lab6/VectorForFigure/: TArray.cpp  TArray.h  TArray.hpp  TIterator.cpp  TIterator.h  TVectorItem.cpp  TVectorItem.h
lab6/tests/: 01.t  02.t  03.t  04.t  05.t  06.t  07.t  08.t  09.t  10.t  11.t  12.t  13.t  14.t  15.t
lab7/: CMakeLists.txt  CheckList.cpp  Makefile  TAllocator.cpp  TList.h  TStack.h  TStack.hpp  main.cpp  makefile  rectangle.cpp  rectangle.h  run  square.cpp  square.h  trapeze.cpp  trapeze.h
lab7/Figure/: Figure.h  Square.cpp
lab7/TAllocateList/: TAllocationBlock.cpp  TAllocationBlock.h
lab7/TList/: TIteratorList.cpp  TIteratorList.h  TList.cpp  TList.h  TListItem.cpp  TListItem.h
lab7/VectorForFigure/: TIterator.cpp  TIterator.h  TVector.cpp  TVector.h  TVectorItem.cpp  TVectorItem.h
lab9/: CMakeLists.txt  TList.cpp  TList.h  TStack.cpp  TStackItem.cpp  figure.h  main.cpp  rectangle.cpp  run  square.cpp  square.h
(+13 files in other folders)
